@@ -1,3 +1,8 @@
+2004-08-21  Andrey Slusar <anray@users.sourceforge.net>
+
+	* src/common/log.c: removed getenv()s, create
+	    security risk for setuid news programs.
+
 2004-08-07  Andrey Slusar <anray@users.sourceforge.net>
 
 	* configure.in: fix default prefix
